k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tv-api
  labels:
    app: tv-api
spec:
  selector:
    app: tv-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
