k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tv-api
  labels:
    app: tv-api
    product: tv
    role: backend
spec:
  # Set the host for your own environment.
  host: tv-api.example.com
  path: /api
  to:
    kind: Service
    name: tv-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
